# nifti-inspector-mcp

./: .gitignore  DEMO_SCRIPT.md  README.md  constraints-dev.txt  constraints.txt  pyproject.toml
nifti-inspector-mcp/: LICENSE
nifti-inspector-mcp/nifti_inspector/: models.py
nifti-inspector-mcp/tests/: test_bids.py
nifti_inspector/: __init__.py  server.py  tools.py
tests/: generate_sample_data.py  test_load_nifti.py  test_motion.py
tests/sample_data/bids_demo/: README  dataset_description.json  participants.tsv
tests/sample_data/bids_demo/sub-01/func/: sub-01_task-rest_bold.json
